# cosmic-applet-music-player

./: CLAUDE.md  FLAKE-USAGE.md  GITHUB-ISSUE-UPDATE.md  NIXOS-BUILD-NOTES.md  README.md  flake.nix  justfile
.github/workflows/: README.md  ci.yml  release.yml
music-player/: Cargo.toml
music-player/src/: app.rs  audio.rs  config.rs  music.rs
music-player/src/app/: subscription.rs  view.rs
music-player/src/app/view/: view_window.rs
res/: com.github.MusicPlayer.desktop  com.github.MusicPlayer.metainfo.xml
